--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,6 @@ buildscript {
 
 plugins {
     id 'java'
-    id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
 }
 
 repositories {
@@ -15,12 +13,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.3.2")
-
-    //testfx                    TODO
-    compile("org.testfx:testfx-core:4.0.13-alpha")
-    compile("org.testfx:testfx-junit5:4.0.13-alpha")
+    compile("javax.vecmath:vecmath:1.5.2")
 }
 
 group 'com.boids'
@@ -28,19 +21,3 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-}
-
-test {
-    useJUnitPlatform()
-//    systemProperty 'junit.jupiter.conditions.deactivate', '*'
-//    systemProperties = [
-//            'junit.jupiter.extensions.autodetection.enabled': 'true',
-//            'junit.jupiter.testinstance.lifecycle.default'  : 'per_class'
-//    ]
-}
