--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ repositories {
 
 dependencies {
     compile("javax.vecmath:vecmath:1.5.2")
-    compile("com.typesafe.akka:akka-actor-typed_2.13:2.5.25")
+//    compile("com.typesafe.akka:akka-actor-typed_2.13:2.5.25")
+    compile 'com.typesafe.akka:akka-actor_2.12:2.6.1'
+//    compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.5.27'1
     compile ("ch.qos.logback:logback-classic:1.2.3")
 }
 
