--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,32 @@ dependencies {
     compile 'com.typesafe.akka:akka-actor_2.12:2.6.1'
 //    compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.5.27'1
     compile ("ch.qos.logback:logback-classic:1.2.3")
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    compile group: 'systems.manifold', name: 'manifold-ext', version: '2019.1.32'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        // tools.jar dependency (for Java 8 only), primarily to support structural typing without static proxies.
+        // Thus if you are *not* using structural typing, you **don't** need tools.jar
+        compile files( "${System.properties['java.home']}/../lib/tools.jar" )
+    }
+    // Add manifold to -processorpath for javac
+    annotationProcessor group: 'systems.manifold', name: 'manifold-ext', version: '2019.1.32'
+}
+
+if (JavaVersion.current() != JavaVersion.VERSION_1_8 &&
+        sourceSets.main.allJava.files.any {it.name == "module-info.java"}) {
+    tasks.withType(JavaCompile) {
+        // if you DO define a module-info.java file:
+        options.compilerArgs += ['-Xplugin:Manifold', '--module-path', it.classpath.asPath]
+    }
+} else {
+    tasks.withType(JavaCompile) {
+        // If you DO NOT define a module-info.java file:
+        options.compilerArgs += ['-Xplugin:Manifold']
+    }
+
 }
 
 group 'com.boids'
